--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,5 @@
 exam.not.found= \u0627\u0645\u062A\u062D\u0627\u0646 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
 exam.level.not.found=\u0644\u0648\u0644 \u0627\u0645\u062A\u062D\u0627\u0646 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
+name.is.null=\u0646\u0627\u0645 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+description.is.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+level.is.null=\u0644\u0648\u0644 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
