--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ enum.not.exist=\u0627\u06CC\u0646 \u0645\u0642\u062F\u0627\u0631 \u062C\u0632\u0
 exam.save.dto.name.blank=\u0646\u0627\u0645 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A
 exam.save.dto.level.null=\u0633\u0637\u062D \u0622\u0632\u0645\u0648\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 exam.save.dto.description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u0646\u0628\u0627\u06CC\u062F \u062E\u0627\u0644\u06CC \u0628\u0627\u0634\u062F.
+exam.not.found=\u0627\u0645\u0646\u062D\u0627\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
