--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,9 @@ exam.save.dto.level.null=\u0633\u0637\u062D \u0622\u0632\u0645\u0648\u0646 \u062
 exam.save.dto.description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u0646\u0628\u0627\u06CC\u062F \u062E\u0627\u0644\u06CC \u0628\u0627\u0634\u062F.
 exam.not.found=\u0627\u0645\u0646\u062D\u0627\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
 
-question.save.dto.exam.null=فیلد امتحان خالی است.
-question.save.dto.title.blank=فیلد سوال خالی است.
-Question.not.found=سوال پیدا نشد.
-option.not.found=گزینه پیدا نشد.
+question.save.dto.exam.null=\u0641\u06CC\u0644\u062F \u0627\u0645\u062A\u062D\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+question.save.dto.title.blank=\u0641\u06CC\u0644\u062F \u0633\u0648\u0627\u0644 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+Question.not.found=\u0633\u0648\u0627\u0644 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
+option.not.found=\u06AF\u0632\u06CC\u0646\u0647 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
+
+hint.not.found=\u0647\u06CC\u0646\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
