saveCompleted method add

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,12 @@ Question.not.found=\u0633\u0648\u0627\u0644 \u067E\u06CC\u062F\u0627 \u0646\u063
 option.not.found=\u06AF\u0632\u06CC\u0646\u0647 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
 
 hint.not.found=\u0647\u06CC\u0646\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
+
+
+hint.level.null= \u0644\u0648\u0644 \u0647\u06CC\u0646\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+hint.title.null=\u0639\u0646\u0648\u0627\u0646 \u0647\u06CC\u0646\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+
+description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+title.null=\u0639\u0646\u0648\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+
+exam.id.null=\u0622\u06CC\u062F\u06CC \u0627\u0645\u062A\u062D\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
