make user anotations *persian texts not build*

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,22 +1,21 @@
-level.not.found= \u0633\u0637\u062D \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
+level.not.found=\u0633\u0637\u062D \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
 enum.not.exist=\u0627\u06CC\u0646 \u0645\u0642\u062F\u0627\u0631 \u062C\u0632\u0648 \u0645\u0642\u0627\u062F\u06CC\u0631 \u062B\u0627\u0628\u062A \u0646\u06CC\u0633\u062A.
 exam.save.dto.name.blank=\u0646\u0627\u0645 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A
 exam.save.dto.level.null=\u0633\u0637\u062D \u0622\u0632\u0645\u0648\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 exam.save.dto.description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u0646\u0628\u0627\u06CC\u062F \u062E\u0627\u0644\u06CC \u0628\u0627\u0634\u062F.
 exam.not.found=\u0627\u0645\u0646\u062D\u0627\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
-
 question.save.dto.exam.null=\u0641\u06CC\u0644\u062F \u0627\u0645\u062A\u062D\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 question.save.dto.title.blank=\u0641\u06CC\u0644\u062F \u0633\u0648\u0627\u0644 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 Question.not.found=\u0633\u0648\u0627\u0644 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
 option.not.found=\u06AF\u0632\u06CC\u0646\u0647 \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
-
 hint.not.found=\u0647\u06CC\u0646\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
-
-
-hint.level.null= \u0644\u0648\u0644 \u0647\u06CC\u0646\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+hint.level.null=\u0644\u0648\u0644 \u0647\u06CC\u0646\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 hint.title.null=\u0639\u0646\u0648\u0627\u0646 \u0647\u06CC\u0646\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
-
 description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 title.null=\u0639\u0646\u0648\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
-
 exam.id.null=\u0622\u06CC\u062F\u06CC \u0627\u0645\u062A\u062D\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+user.username.null=
+user.password.null=
+user.nationalCode.null=
+user.nationality.null=
+user.name.null=
