create register user

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,8 +14,8 @@ hint.title.null=\u0639\u0646\u0648\u0627\u0646 \u0647\u06CC\u0646\u062A \u062E\u
 description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 title.null=\u0639\u0646\u0648\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 exam.id.null=\u0622\u06CC\u062F\u06CC \u0627\u0645\u062A\u062D\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
-user.username.null=
-user.password.null=
-user.nationalCode.null=
-user.nationality.null=
-user.name.null=
+user.username.null=یوزرنیم خالی است.
+user.password.null=رمز خالی است.
+user.nationalCode.null=کدملی خالی است.
+user.nationality.null=ملیت خالی است.
+user.name.null=اسم خالی است.
