--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,6 @@ user.password.null=رمز خالی است.
 user.nationalCode.null=کدملی خالی است.
 user.nationality.null=ملیت خالی است.
 user.name.null=اسم خالی است.
+submitExamDto.userId.notNull= یوزر وجود ندارد
+submitExamDto.examId.notNull= امتحان وجود ندارد
+submitExamDto.answers.notEmpty= لطفا به همه ی سوال ها پاسخ دهید
