--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,11 +14,12 @@ hint.title.null=\u0639\u0646\u0648\u0627\u0646 \u0647\u06CC\u0646\u062A \u062E\u
 description.null=\u062A\u0648\u0636\u06CC\u062D\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 title.null=\u0639\u0646\u0648\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
 exam.id.null=\u0622\u06CC\u062F\u06CC \u0627\u0645\u062A\u062D\u0627\u0646 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
-user.username.null=یوزرنیم خالی است.
-user.password.null=رمز خالی است.
-user.nationalCode.null=کدملی خالی است.
-user.nationality.null=ملیت خالی است.
-user.name.null=اسم خالی است.
-submitExamDto.userId.notNull= یوزر وجود ندارد
-submitExamDto.examId.notNull= امتحان وجود ندارد
-submitExamDto.answers.notEmpty= لطفا به همه ی سوال ها پاسخ دهید
+user.username.null=\u06CC\u0648\u0632\u0631\u0646\u06CC\u0645 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+user.password.null=\u0631\u0645\u0632 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+user.nationalCode.null=\u06A9\u062F\u0645\u0644\u06CC \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+user.nationality.null=\u0645\u0644\u06CC\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+user.name.null=\u0627\u0633\u0645 \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+submitExamDto.userId.notNull= \u06CC\u0648\u0632\u0631 \u0648\u062C\u0648\u062F \u0646\u062F\u0627\u0631\u062F
+submitExamDto.examId.notNull= \u0627\u0645\u062A\u062D\u0627\u0646 \u0648\u062C\u0648\u062F \u0646\u062F\u0627\u0631\u062F
+submitExamDto.answers.notEmpty= \u0644\u0637\u0641\u0627 \u0628\u0647 \u0647\u0645\u0647 \u06CC \u0633\u0648\u0627\u0644 \u0647\u0627 \u067E\u0627\u0633\u062E \u062F\u0647\u06CC\u062F
+answers.empty=\u0633\u0648\u0627\u0644\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
