--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,3 +23,4 @@ submitExamDto.userId.notNull= \u06CC\u0648\u0632\u0631 \u0648\u062C\u0648\u062F 
 submitExamDto.examId.notNull= \u0627\u0645\u062A\u062D\u0627\u0646 \u0648\u062C\u0648\u062F \u0646\u062F\u0627\u0631\u062F
 submitExamDto.answers.notEmpty= \u0644\u0637\u0641\u0627 \u0628\u0647 \u0647\u0645\u0647 \u06CC \u0633\u0648\u0627\u0644 \u0647\u0627 \u067E\u0627\u0633\u062E \u062F\u0647\u06CC\u062F
 answers.empty=\u0633\u0648\u0627\u0644\u0627\u062A \u062E\u0627\u0644\u06CC \u0627\u0633\u062A.
+user.exam.not.found=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u067E\u06CC\u062F\u0627 \u0646\u0634\u062F.
